	* src/kahua/server.scm :
	(kahua-default-handler): let render-proc return (Stree, Context)
	instead of just Stree, so that it can inject information into
	Context.   Specifically, a context "extra-headers" is used
	as an additional header fields of reply message.
	(extra-header): a new SXML element, which doesn't produce any
	visual node but just inject a reply header.
	* test/server.scm : updated accordingly.

	* src/Makefile.in (SCMFILES): install kahua/test/*.scm as well.

2004-01-18  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm : removed bogus reference to kahua.app module.

2004-01-15  Shiro Kawai  <shiro@acm.org>

	* src/kahua/html.scm : merged into kahua/server.scm
	* src/kahua/server.scm :
	(kahua-current-context) : context is kept in this global parameter.
	(kahua-default-handler) : changed calling convention of content
	handlers.  Now the handler is () -> [SXML], and completely decoupled
	from the rendering routine, whose default is interp-html.  Also,
	the extra path info is passed in context.
	(kahua-context-ref) : dropped 'context' argument, for it is now
	obtained from kahua-current-context.
	(kahua-context-add) : dropped, for it is not used at all.
	(kahua-current-user) : dropped 'context' argument, for it is now
	obtained from kahua-current-context.
	(define-entry) : allow the handler to take positional and/or
	query arguments.
	(entry-lambda) : new macro that is the core part of parsing
	positional and query arguments for entry procedures.
	(a/cont) : allow to specify positional and query arguments for
	continuation, which will be rendered in a link url.
	
	* src/kahua/test/worker.scm (make-match&pick) : added handling of
	extra path-info.
	
	* examples/*, test/* : reflected above changes.

2004-01-14  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (kahua-default-handler): passes path-info
	  to the handling procedure using the context ("x-kahua-path-info").

2004-01-13  Shiro Kawai  <shiro@acm.org>
